5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1578_579.log
== TEST (2019-03-13 18:52:10) 
-- CODE:
print("A UFAM tem", 2019-1907,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 112 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:52:18) 
-- CODE:
print("A UFAM tem", 2019-1907,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 112 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:52:28) 
-- CODE:
print("A UFAM tem", 2019-1907,"anos de fundacao.")
-- EXECUTION TIME:
0.233466
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 112 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:50:32) 
-- CODE:
print("A UFAM tem" 2016-1907"anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2016-1907"anos de fundacao.")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:50:43) 
-- CODE:
print("A UFAM tem" 2019-1907"anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2019-1907"anos de fundacao.")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:50:55) 
-- CODE:
print("A UFAM tem" 2019-1907"anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem" 2019-1907"anos de fundacao.")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:51:45) 
-- CODE:
print("A UFAM tem", 2019-1907" anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2019-1907" anos de fundacao.")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:52:42) 
-- CODE:
print("A UFAM tem", 2019-1909" anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2019-1909" anos de fundacao.")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:52:42) 
-- CODE:
print("A UFAM tem", 2019-1909" anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2019-1909" anos de fundacao.")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:52:53) 
-- CODE:
print("A UFAM tem", 2016-1909" anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016-1909" anos de fundacao.")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 18:53:26) 
-- CODE:
print("A UFAM tem", 2016-1909" anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem", 2016-1909" anos de fundacao.")
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 19:48:20) 
-- CODE:
print("A UFAM tem", 2016-1909," anos de fundacao.")
-- OUTPUT:
A UFAM tem 107  anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 19:48:28) 
-- CODE:
print("A UFAM tem", 2016-1909," anos de fundacao.")
-- EXECUTION TIME:
0.169906
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107  anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
